--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-scheduler.cron=0 * * * * *
+scheduler.cron=0 */2 * * * *
+# Sergei + Sveta
+scheduler.charIds=168988261,531923698
 
 logging.level.com.github.russianconsulatebot=DEBUG
