Don't run at night

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-scheduler.cron=0 */2 * * * *
+# Every two minutes,between 8 am and 23 pm
+scheduler.cron=0 */2 8-23 ? * *
 # Sergei + Sveta
 scheduler.charIds=168988261,531923698
 
