--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-# Every two minutes,between 8 am and 23 pm
-scheduler.cron=0 */2 8-23 ? * *
+# Every two minutes,between 7 am and 23 pm UTC
+scheduler.cron=0 */2 7-23 ? * *
 # Sergei + Sveta
 scheduler.charIds=168988261,531923698
+
+telegram.api_key=PUT_YOUR_API_KEY_HERE
 
 logging.level.com.github.russianconsulatebot=DEBUG
