Run rarely at night

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-# Every two minutes,between 7 am and 23 pm UTC
-scheduler.cron=0 */2 7-23 ? * *
+# Day: Every 2 mins, night every hour
+scheduler.day_cron=0 */2 * ? * *
+scheduler.night_cron=0 20 */1 ? * *
 # Sergei + Sveta
 scheduler.charIds=168988261,531923698
 
