Add "Too many questions" exception

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Disable any web server, because we don't need it
+spring.main.web-application-type=none
+
 # Day: Every 2 mins, night every hour
 scheduler.day_cron=0 */2 * ? * *
 scheduler.night_cron=0 20 */1 ? * *
