--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ scheduler.charIds=168988261,531923698
 telegram.api_key=PUT_YOUR_API_KEY_HERE
 
 logging.level.com.github.russianconsulatebot=DEBUG
+logging.level.ok-http-client=TRACE
