--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,3 +2,4 @@ scheduler.day_cron=-
 scheduler.night_cron=-
 
 logging.level.com.github.russianconsulatebot=DEBUG
+logging.level.ok-http-client=TRACE
