Disable telegram bot for integration tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,11 @@ spring.main.web-application-type=none
 # Day: Every 2 mins, night every hour
 scheduler.day_cron=0 */2 * ? * *
 scheduler.night_cron=0 20 */1 ? * *
+
 # Sergei + Sveta
 scheduler.charIds=168988261,531923698
 
 telegram.api_key=PUT_YOUR_API_KEY_HERE
 
 logging.level.com.github.russianconsulatebot=DEBUG
-logging.level.ok-http-client=TRACE
+logging.level.ok-http-client=INFO
