--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,7 @@
 scheduler.day_cron=-
 scheduler.night_cron=-
 
+telegram_bot.enabled=false
+
 logging.level.com.github.russianconsulatebot=DEBUG
 logging.level.ok-http-client=TRACE
