--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ telegram.api_key=PUT_YOUR_API_KEY_HERE
 
 logging.level.com.github.russianconsulatebot=DEBUG
 logging.level.ok-http-client=INFO
+
+spring.ssl.bundle.pem.kdmid_ru.truststore.certificate=classpath:/_.kdmid.ru.cer
